--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "js2uix",
+  "name": "js2uix-test",
   "version": "1.0.1",
   "description": "js2uix dom control and ui module",
   "main": "core/js2uix-v1.0.1.js",
   "scripts": {
-    "test": "node js2uix.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
