js2uix - develop

--- a/package.json
+++ b/package.json
@@ -10,14 +10,9 @@
     "type": "git",
     "url": "git+https://github.com/js2uix/js2uix.git"
   },
-  "keywords": [
-    "js2uix",
-    "js2uix"
-  ],
+  "keywords": ["js2uix"],
   "author": "js2uix",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/js2uix/js2uix/issues"
-  },
+  "bugs": {"url": "https://github.com/js2uix/js2uix/issues"},
   "homepage": "https://github.com/js2uix/js2uix#readme"
 }
