js2uix - develop

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js2uix-test",
+  "name": "js2uix",
   "version": "1.0.1",
   "description": "js2uix dom control and ui module",
   "main": "core/js2uix-v1.0.1.js",
@@ -10,9 +10,13 @@
     "type": "git",
     "url": "git+https://github.com/js2uix/js2uix.git"
   },
-  "keywords": ["js2uix"],
+  "keywords": [
+    "js2uix"
+  ],
   "author": "js2uix",
   "license": "MIT",
-  "bugs": {"url": "https://github.com/js2uix/js2uix/issues"},
+  "bugs": {
+    "url": "https://github.com/js2uix/js2uix/issues"
+  },
   "homepage": "https://github.com/js2uix/js2uix#readme"
 }
