--- a/packages/js2uix/package.json
+++ b/packages/js2uix/package.json
@@ -29,5 +29,6 @@
   },
   "bugs": {
     "url": "https://github.com/js2uix/js2uix/issues"
-  }
+  },
+  "gitHead": "778669307b170e68aac0df2c0faa7af259dd8bb1"
 }
