--- a/packages/js2uix/package.json
+++ b/packages/js2uix/package.json
@@ -7,7 +7,7 @@
     "js2uix",
     "libray"
   ],
-  "author": "yujh <yujh@wemakeprice.com>",
+  "author": "js2uix <deshineplus@icloud.com>",
   "homepage": "js2uix",
   "license": "MIT",
   "main": "dist/js2uix.js",
